# rgbcmyk

./: Cargo.toml  index.html
src/: camera.rs  color_picker.rs  cube.rs  main.rs
